--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
     "object-assign":"4.1.0"
+    "prom-client": "11.5.3"
   },
   "engine": {
     "node": "*",
